add secutitySchemes ao swagger
