# src/routes/ordersRoute.js
@@ -1,6 +1,6 @@
 const express = require('express');
 const router = express.Router();
-const authenticate = require('../middlewares/authMiddleware');
+const { authenticate } = require('../middlewares/authMiddleware');
 const { ordersController } = require('../controllers/ordersController');
 
 router.get('/', ordersController.getAllOrders);
